rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct YArrayIter {} YArrayIter;
typedef struct YMapIter {} YMapIter;
typedef struct YUndoManager {} YUndoManager;
typedef struct YSubscription {} YSubscription;
typedef struct TransactionInner TransactionInner;
typedef YDoc YDoc;
typedef Branch Branch;
typedef union YOutputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  const char *buf;
  struct YOutput *array;
  struct YMapEntry *map;
  Branch *y_type;
  YDoc *y_doc;
} YOutputContent;
typedef struct YOutput {
  int8_t tag;
  uint32_t len;
  union YOutputContent value;
} YOutput;
typedef struct YMapEntry {
  const char *key;
  const struct YOutput *value;
} YMapEntry;
typedef YSubscription YSubscription;
typedef struct YAfterTransactionEvent {
  struct YStateVector before_state;
  struct YStateVector after_state;
  struct YDeleteSet delete_set;
} YAfterTransactionEvent;
typedef struct YSubdocsEvent {
  uint32_t added_len;
  uint32_t removed_len;
  uint32_t loaded_len;
  YDoc **added;
  YDoc **removed;
  YDoc **loaded;
} YSubdocsEvent;
typedef struct TransactionInner YTransaction;
typedef union YInputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  char *buf;
  struct YInput *values;
  struct YMapInputData map;
  YDoc *doc;
  const Weak *weak;
} YInputContent;
typedef struct YInput {
  int8_t tag;
  uint32_t len;
  union YInputContent value;
} YInput;
typedef struct YDeltaIn {
  uint8_t tag;
  uint32_t len;
  const struct YInput *attributes;
  const struct YInput *insert;
} YDeltaIn;
typedef struct YTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YTextEvent;
typedef struct YMapEvent {
  const void *inner;
  const TransactionMut *txn;
} YMapEvent;
typedef struct YArrayEvent {
  const void *inner;
  const TransactionMut *txn;
} YArrayEvent;
typedef struct YXmlEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlEvent;
typedef struct YXmlTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlTextEvent;
typedef struct YWeakLinkEvent {
  const void *inner;
  const TransactionMut *txn;
} YWeakLinkEvent;
typedef struct YEvent {
  int8_t tag;
  union YEventContent content;
} YEvent;
typedef struct YUndoEvent {
  char kind;
  const char *origin;
  uint32_t origin_len;
  void *meta;
} YUndoEvent;
void ymap_entry_destroy(struct YMapEntry *value);
void ystring_destroy(char *str);
YSubscription *ydoc_observe_updates_v1(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_updates_v2(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_after_transaction(YDoc *doc,
                                              void *state,
                                              void (*cb)(void*, struct YAfterTransactionEvent*));
YSubscription *ydoc_observe_subdocs(YDoc *doc,
                                    void *state,
                                    void (*cb)(void*, struct YSubdocsEvent*));
YSubscription *ydoc_observe_clear(YDoc *doc, void *state, void (*cb)(void*, YDoc*));
uint32_t ytext_len(const Branch *txt, const YTransaction *txn);
void ytext_insert_delta(const Branch *txt,
                        YTransaction *txn,
                        struct YDeltaIn *delta,
                        uint32_t delta_len);
struct YDeltaIn ydelta_input_insert(const struct YInput *data,
                                    const struct YInput *attrs);
void ytext_remove_range(const Branch *txt, YTransaction *txn, uint32_t index, uint32_t length);
uint32_t yarray_len(const Branch *array);
struct YOutput *yarray_get(const Branch *array, const YTransaction *txn, uint32_t index);
char *yarray_get_json(const Branch *array, const YTransaction *txn, uint32_t index);
void yarray_insert_range(const Branch *array,
                         YTransaction *txn,
                         uint32_t index,
                         const struct YInput *items,
                         uint32_t items_len);
void yarray_remove_range(const Branch *array, YTransaction *txn, uint32_t index, uint32_t len);
void yarray_move(const Branch *array, YTransaction *txn, uint32_t source, uint32_t target);
YArrayIter *yarray_iter(const Branch *array, YTransaction *txn);
void yarray_iter_destroy(YArrayIter *iter);
struct YOutput *yarray_iter_next(YArrayIter *iterator);
YMapIter *ymap_iter(const Branch *map, const YTransaction *txn);
void ymap_iter_destroy(YMapIter *iter);
struct YMapEntry *ymap_iter_next(YMapIter *iter);
uint32_t ymap_len(const Branch *map, const YTransaction *txn);
void youtput_destroy(struct YOutput *val);
struct YInput yinput_string(const char *str);
YSubscription *ytext_observe(const Branch *txt, void *state, void (*cb)(void*,
                                                                        const struct YTextEvent*,
                                                                        uint32_t,
                                                                        const char*));
YSubscription *ymap_observe(const Branch *map, void *state, void (*cb)(void*,
                                                                       const struct YMapEvent*));
YSubscription *yarray_observe(const Branch *array,
                              void *state,
                              void (*cb)(void*, const struct YArrayEvent*));
YSubscription *yxmlelem_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlEvent*));
YSubscription *yxmltext_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlTextEvent*));
YSubscription *yobserve_deep(Branch *ytype, void *state, void (*cb)(void*,
                                                                    uint32_t,
                                                                    const struct YEvent*));
YSubscription *yundo_manager_observe_added(YUndoManager *mgr,
                                           void *state,
                                           void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yundo_manager_observe_popped(YUndoManager *mgr,
                                            void *state,
                                            void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yweak_observe(const Branch *weak,
                             void *state,
                             void (*cb)(void*, const struct YWeakLinkEvent*));