lib/src/ffi/y_dart_bindings_generated.dart


  /// Creates a parameter for `ytext_insert_delta` function. This parameter will tell cursor to insert
  /// given elements into current cursor position. While these elements can be of any type (used for
  /// embedding ie. shared types or binary payload like images), for the text insertion a `yinput_string`
  /// is expected. If formatting attributes were specified, inserted elements will be wrapped by
  /// given formatting attributes.
  YDeltaIn ydelta_input_insert(
    ffi.Pointer<YInput> data,
    ffi.Pointer<YInput> attrs,
  ) {
    return _ydelta_input_insert(
      data,
      attrs,
    );
  }

  late final _ydelta_input_insertPtr = _lookup<
      ffi.NativeFunction<
          YDeltaIn Function(ffi.Pointer<YInput>,
              ffi.Pointer<YInput>)>>('ydelta_input_insert');
  late final _ydelta_input_insert = _ydelta_input_insertPtr.asFunction<
      YDeltaIn Function(ffi.Pointer<YInput>, ffi.Pointer<YInput>)>();

  /// Removes a range of characters, starting a a given `index`. This range must fit within the bounds
  /// of a current `YText`, otherwise this function call will fail.
  ///
  /// An `index` value must be between 0 and the length of a `YText` (exclusive, accordingly to
  /// [ytext_len] return value).
  ///
  /// A `length` must be lower or equal number of characters (counted as UTF chars depending on the
  /// encoding configured by `YDoc`) from `index` position to the end of of the string.
  void ytext_remove_range(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int index,
    int length,
  ) {
    return _ytext_remove_range(
      txt,
      txn,
      index,
      length,
    );
  }

  late final _ytext_remove_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Uint32, ffi.Uint32)>>('ytext_remove_range');
  late final _ytext_remove_range = _ytext_remove_rangePtr.asFunction<
      void Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int, int)>();

  /// Returns a number of elements stored within current instance of `YArray`.
  int yarray_len(
    ffi.Pointer<Branch> array,
  ) {
    return _yarray_len(
      array,
    );
  }

  late final _yarray_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(ffi.Pointer<Branch>)>>(
          'yarray_len');
  late final _yarray_len =
      _yarray_lenPtr.asFunction<int Function(ffi.Pointer<Branch>)>();

  /// Returns a pointer to a `YOutput` value stored at a given `index` of a current `YArray`.
  /// If `index` is outside the bounds of an array, a null pointer will be returned.
  ///
  /// A value returned should be eventually released using [youtput_destroy] function.
  ffi.Pointer<YOutput> yarray_get(
    ffi.Pointer<Branch> array,
    ffi.Pointer<YTransaction> txn,
    int index,
  ) {
    return _yarray_get(
      array,
      txn,
      index,
    );
  }

  late final _yarray_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YOutput> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>, ffi.Uint32)>>('yarray_get');
  late final _yarray_get = _yarray_getPtr.asFunction<
      ffi.Pointer<YOutput> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int)>();

  /// Returns a UTF-8 encoded, NULL-terminated JSON string representing a value stored in a current
  /// YArray under a given index.
  ///
  /// This method will return `NULL` pointer if value was outside the bound of an array or couldn't be
  /// serialized into JSON string.
  ///
  /// This method will also try to serialize complex types that don't have native JSON representation
  /// like YMap, YArray, YText etc. in such cases their contents will be materialized into JSON values.
  ///
  /// A string returned should be eventually released using [ystring_destroy] function.
  ffi.Pointer<ffi.Char> yarray_get_json(
    ffi.Pointer<Branch> array,
    ffi.Pointer<YTransaction> txn,
    int index,
  ) {
    return _yarray_get_json(
      array,
      txn,
      index,
    );
  }

  late final _yarray_get_jsonPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>, ffi.Uint32)>>('yarray_get_json');
  late final _yarray_get_json = _yarray_get_jsonPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int)>();

  /// Inserts a range of `items` into current `YArray`, starting at given `index`. An `items_len`
  /// parameter is used to determine the size of `items` array - it can also be used to insert
  /// a single element given its pointer.
  ///
  /// An `index` value must be between 0 and (inclusive) length of a current array (use [yarray_len]
  /// to determine its length), otherwise it will panic at runtime.
  ///
  /// `YArray` doesn't take ownership over the inserted `items` data - their contents are being copied
  /// into array structure - therefore caller is responsible for freeing all memory associated with
  /// input params.
  void yarray_insert_range(
    ffi.Pointer<Branch> array,
    ffi.Pointer<YTransaction> txn,
    int index,
    ffi.Pointer<YInput> items,
    int items_len,
  ) {
    return _yarray_insert_range(
      array,
      txn,
      index,
      items,
      items_len,
    );
  }

  late final _yarray_insert_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Uint32,
              ffi.Pointer<YInput>,
              ffi.Uint32)>>('yarray_insert_range');
  late final _yarray_insert_range = _yarray_insert_rangePtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int,
          ffi.Pointer<YInput>, int)>();

  /// Removes a `len` of consecutive range of elements from current `array` instance, starting at
  /// a given `index`. Range determined by `index` and `len` must fit into boundaries of an array,
  /// otherwise it will panic at runtime.
  void yarray_remove_range(
    ffi.Pointer<Branch> array,
    ffi.Pointer<YTransaction> txn,
    int index,
    int len,
  ) {
    return _yarray_remove_range(
      array,
      txn,
      index,
      len,
    );
  }

  late final _yarray_remove_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Uint32, ffi.Uint32)>>('yarray_remove_range');
  late final _yarray_remove_range = _yarray_remove_rangePtr.asFunction<
      void Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int, int)>();

  void yarray_move(
    ffi.Pointer<Branch> array,
    ffi.Pointer<YTransaction> txn,
    int source,
    int target,
  ) {
    return _yarray_move(
      array,
      txn,
      source,
      target,
    );
  }

  late final _yarray_movePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Uint32, ffi.Uint32)>>('yarray_move');
  late final _yarray_move = _yarray_movePtr.asFunction<
      void Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int, int)>();

  /// Returns an iterator, which can be used to traverse over all elements of an `array` (`array`'s
  /// length can be determined using [yarray_len] function).
  ///
  /// Use [yarray_iter_next] function in order to retrieve a consecutive array elements.
  /// Use [yarray_iter_destroy] function in order to close the iterator and release its resources.
  ffi.Pointer<YArrayIter> yarray_iter(
    ffi.Pointer<Branch> array,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _yarray_iter(
      array,
      txn,
    );
  }

  late final _yarray_iterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YArrayIter> Function(
              ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>>('yarray_iter');
  late final _yarray_iter = _yarray_iterPtr.asFunction<
      ffi.Pointer<YArrayIter> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Releases all of an `YArray` iterator resources created by calling [yarray_iter].
  void yarray_iter_destroy(
    ffi.Pointer<YArrayIter> iter,
  ) {
    return _yarray_iter_destroy(
      iter,
    );
  }

  late final _yarray_iter_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YArrayIter>)>>(
          'yarray_iter_destroy');
  late final _yarray_iter_destroy = _yarray_iter_destroyPtr
      .asFunction<void Function(ffi.Pointer<YArrayIter>)>();

  /// Moves current `YArray` iterator over to a next element, returning a pointer to it. If an iterator
  /// comes to an end of an array, a null pointer will be returned.
  ///
  /// Returned values should be eventually released using [youtput_destroy] function.
  ffi.Pointer<YOutput> yarray_iter_next(
    ffi.Pointer<YArrayIter> iterator,
  ) {
    return _yarray_iter_next(
      iterator,
    );
  }

  late final _yarray_iter_nextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YOutput> Function(
              ffi.Pointer<YArrayIter>)>>('yarray_iter_next');
  late final _yarray_iter_next = _yarray_iter_nextPtr
      .asFunction<ffi.Pointer<YOutput> Function(ffi.Pointer<YArrayIter>)>();

  /// Returns an iterator, which can be used to traverse over all key-value pairs of a `map`.
  ///
  /// Use [ymap_iter_next] function in order to retrieve a consecutive (**unordered**) map entries.
  /// Use [ymap_iter_destroy] function in order to close the iterator and release its resources.
  ffi.Pointer<YMapIter> ymap_iter(
    ffi.Pointer<Branch> map,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ymap_iter(
      map,
      txn,
    );
  }

  late final _ymap_iterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YMapIter> Function(
              ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>>('ymap_iter');
  late final _ymap_iter = _ymap_iterPtr.asFunction<
      ffi.Pointer<YMapIter> Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();

  /// Releases all of an `YMap` iterator resources created by calling [ymap_iter].
  void ymap_iter_destroy(
    ffi.Pointer<YMapIter> iter,
  ) {
    return _ymap_iter_destroy(
      iter,
    );
  }

  late final _ymap_iter_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YMapIter>)>>(
          'ymap_iter_destroy');
  late final _ymap_iter_destroy =
      _ymap_iter_destroyPtr.asFunction<void Function(ffi.Pointer<YMapIter>)>();

  /// Moves current `YMap` iterator over to a next entry, returning a pointer to it. If an iterator
  /// comes to an end of a map, a null pointer will be returned. Yrs maps are unordered and so are
  /// their iterators.
  ///
  /// Returned values should be eventually released using [ymap_entry_destroy] function.
  ffi.Pointer<YMapEntry> ymap_iter_next(
    ffi.Pointer<YMapIter> iter,
  ) {
    return _ymap_iter_next(
      iter,
    );
  }

  late final _ymap_iter_nextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YMapEntry> Function(
              ffi.Pointer<YMapIter>)>>('ymap_iter_next');
  late final _ymap_iter_next = _ymap_iter_nextPtr
      .asFunction<ffi.Pointer<YMapEntry> Function(ffi.Pointer<YMapIter>)>();

  /// Returns a number of entries stored within a `map`.
  int ymap_len(
    ffi.Pointer<Branch> map,
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ymap_len(
      map,
      txn,
    );
  }

  late final _ymap_lenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint32 Function(
              ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>>('ymap_len');
  late final _ymap_len = _ymap_lenPtr.asFunction<
      int Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>)>();
